# 01_xyz

./: .gitignore  CLAUDE.md  context-summary.md  decisions.md  minds.md  open-questions.md  package-lock.json  package.json  plan.md  scratchpad.md  tsconfig.json
docs/: 01-exchange-microstructure.md  backtest-plan.md  binance-crossvenue-plan.md
docs/sdk/: README.md  nord-admin.md  nord-public-client.md  nord-user.md
examples/: mm-devnet.config.json  mm-eth.config.json  mm-hype.config.json  noop.config.json
research/: README.md  pyproject.toml
research/scripts/: build_dataset.py  candle_stats.py  fill_analysis.py  gm_step0_toy.py  gm_step1_terminal_value.py  lead_lag_probe.py  mm_microstructure.py  regime_analysis.py  tf_compare.py  train_model.py
research/spec/: features.json  model_format.json
research/src/: binance.py  config.py  data.py  dataset.py  features.py  labels.py  train.py
research/tests/: test_parity.py
scripts/ws/: probe.py
src/: client.ts  config.ts  index.ts
src/backtest/: config.ts  feed.ts  metrics.ts  pnl.test.ts  pnl.ts  report.ts  runner.test.ts  runner.ts
src/core/: account.ts  balances.ts  batch.ts  errors.ts  orders.ts  ports.ts  positions.ts  queue.ts
src/data/: feed-source.ts  feed.test.ts  feed.ts
src/engine/: context.ts  registry.ts  runner.ts  session-tracker.ts  types.ts  usage.md
src/registry/: markets.ts  tokens.ts
src/risk/: guard.ts  limits.ts  sizing.ts
src/scripts/: backtest.ts  bench-backtest.ts  bench-feed.ts  bench-latency.ts  deposit-devnet.ts  inspect-parquet.ts  microprice-fit.ts  record.ts  smoke.ts  (+7 more)
(+33 files in other folders)
