[project]
name = "01-research"
version = "0.1.0"
description = "Quant-ML research pipeline for 01 Exchange trading strategies"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.0",
    "lightgbm>=4.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
build-dataset = "scripts.build_dataset:main"
train-model = "scripts.train_model:main"
